name:           Pioneers
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         sdressel

executable Pioneers
  hs-source-dirs:  src
  ghc-options:     -Wall -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -fllvm
  other-modules:   
                   Map.Map,
                   Render.Misc,
                   Render.Render,
                   Render.RenderObject
  main-is:         Main.hs
  build-depends:   
                   base >=4.6,
                   OpenGL >=2.9,
                   bytestring >=0.10,
                   OpenGLRaw >=1.4,
                   text >=0.11,
                   array >=0.4,
                   random >=1.0.1,
                   transformers >=0.3.0 && <0.4,
                   mtl >=2.1.2,
                   stm >=2.4.2,
                   vector >=0.10.9 && <0.11,
                   distributive >=0.3.2 && <0.4,
                   linear >=1.3.1 && <1.4,
                   lens >=3.10.1 && <3.11,
                   SDL2 >= 0.1.0,
                   time >=1.4.0 && <1.5

