name:           Pioneers
version:        0.1
cabal-version:  >= 1.16
build-type:     Simple
author:         sdressel

executable Pioneers
  hs-source-dirs:  src
  if os(windows) {
    ghc-options:     -Wall -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
  } else {
    ghc-options:     -Wall -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -fllvm
  }
  other-module
                   Map.Types,
                   Map.Graphics,
                   Map.Creation,
                   Map.StaticMaps,
                   IQM.Types,
                   IQM.TestMain,
                   IQM.Parser,
                   Render.Misc,
                   Render.Render,
                   Render.RenderObject,
                   UI.Callbacks,
                   Types,
                   UI.SurfaceOverlay
                   Types
  main-is:         Main.hs
  build-depends:   
                   base >=4.6,
                   OpenGL >=2.9,
                   bytestring >=0.10,
                   OpenGLRaw >=1.4,
                   text >=0.11,
                   array >=0.4,
                   random >=1.0.1,
                   transformers >=0.3.0,
                   unordered-containers >= 0.2.1,
                   hashable >= 1.0.1.1,
                   mtl >=2.1.2,
                   stm >=2.4.2,
                   vector >=0.10.9 && <0.11,
                   distributive >=0.3.2,
                   linear >=1.3.1, 
                   lens >=4.0,
                   SDL2 >= 0.1.0,
                   time >=1.4.0,
                   GLUtil >= 0.7,
                   attoparsec >= 0.11.2
  other-modules:   Render.Types
  Default-Language: Haskell2010

