name:           Pioneers
version:        0.1
cabal-version:  >= 1.16
build-type:     Simple
author:         sdressel

executable Pioneers
  hs-source-dirs:  src
  if os(windows) {
    ghc-options:     -Wall -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
  } else {
    ghc-options:     -Wall -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -fllvm
  }
  other-modules:
                   Map.Map,
                   Map.Combinators,
                   Map.Types,
                   Map.Graphics,
                   Map.Creation,
                   Map.StaticMaps,
                   Importer.IQM.Types,
                   Importer.IQM.Parser,
                   Render.Misc,
                   Render.Render,
                   Render.RenderObject,
                   Render.Types,
                   UI.Callbacks,
                   Types
  main-is:         Main.hs
  build-depends:   
                   base >=4.6,
                   OpenGL >=2.9,
                   bytestring >=0.10,
                   OpenGLRaw >=1.4,
                   text >=0.11,
                   array >=0.4,
                   random >=1.0.1,
                   transformers >=0.3.0,
                   unordered-containers >= 0.2.1,
                   hashable >= 1.0.1.1,
                   mtl >=2.1.2,
                   stm >=2.4.2,
                   vector >=0.10.9 && <0.11,
                   distributive >=0.3.2,
                   linear >=1.3.1, 
                   lens >=4.0,
                   SDL2 >= 0.1.0,
                   time >=1.4.0,
                   GLUtil >= 0.7,
                   attoparsec >= 0.11.2,
                   attoparsec-binary >= 0.1
  Default-Language: Haskell2010

test-suite QuickCheckTests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests, src
  main-is:           MainTestSuite.hs
  build-depends:     base,
                     OpenGL >=2.9,
                     bytestring >=0.10,
                     OpenGLRaw >=1.4,
                     text >=0.11,
                     array >=0.4,
                     random >=1.0.1,
                     transformers >=0.3.0,
                     unordered-containers >= 0.2.1,
                     hashable >= 1.0.1.1,
                     mtl >=2.1.2,
                     stm >=2.4.2,
                     vector >=0.10.9 && <0.11,
                     distributive >=0.3.2,
                     linear >=1.3.1,
                     lens >=4.0,
                     SDL2 >= 0.1.0,
                     time >=1.4.0,
                     GLUtil >= 0.7,
                     attoparsec >= 0.11.2,
                     attoparsec-binary >= 0.1,
                     QuickCheck,
                     test-framework,
                     test-framework-quickcheck2
  Default-Language: Haskell2010
